--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -50,7 +50,7 @@ OptimizationBBO = "0.1, 0.2"
 OptimizationCMAEvolutionStrategy = "0.1, 0.2"
 OptimizationEvolutionary = "0.1, 0.2"
 OptimizationGCMAES = "0.1, 0.2"
-OptimizationMOI = "0.1, 0.2, 0.3"
+OptimizationMOI = "0.1, 0.2, 0.3, 0.4"
 OptimizationMetaheuristics = "0.1, 0.2"
 OptimizationMultistartOptimization = "0.1, 0.2"
 OptimizationNLopt = "0.1, 0.2"
