--- a/lib/OptimizationMOI/Project.toml
+++ b/lib/OptimizationMOI/Project.toml
@@ -17,7 +17,7 @@ Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 Ipopt_jll = "=300.1400.400"
 Juniper = "0.9"
 MathOptInterface = "1"
-ModelingToolkit = "8.74"
+ModelingToolkit = "8.74, 9"
 Optimization = "3.21"
 Reexport = "1.2"
 SymbolicIndexingInterface = "0.3"
