CompatHelper: bump compat for OptimizationEvolutionary to 0.3 for package docs, (keep existing compat)

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -48,7 +48,7 @@ NLopt = "0.6, 1"
 Optimization = "3"
 OptimizationBBO = "0.1, 0.2"
 OptimizationCMAEvolutionStrategy = "0.1, 0.2"
-OptimizationEvolutionary = "0.1, 0.2"
+OptimizationEvolutionary = "0.1, 0.2, 0.3"
 OptimizationGCMAES = "0.1, 0.2"
 OptimizationMOI = "0.1, 0.2, 0.3"
 OptimizationMetaheuristics = "0.1, 0.2"
