CompatHelper: bump compat for Symbolics in [weakdeps] to 6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -61,7 +61,7 @@ SciMLBase = "2.20.0"
 SparseArrays = "1.10"
 SparseDiffTools = "2.14"
 SymbolicIndexingInterface = "0.3.2"
-Symbolics = "5.12"
+Symbolics = "5.12, 6"
 TerminalLoggers = "0.1"
 Tracker = "0.2.29"
 Zygote = "0.6.67"
