--- a/lib/OptimizationMOI/Project.toml
+++ b/lib/OptimizationMOI/Project.toml
@@ -21,7 +21,7 @@ ModelingToolkit = "8.74"
 Optimization = "3.21"
 Reexport = "1.2"
 SymbolicIndexingInterface = "0.3"
-Symbolics = "5"
+Symbolics = "5, 6"
 julia = "1"
 
 [extras]
