--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -49,7 +49,7 @@ Optimization = "3"
 OptimizationBBO = "0.1, 0.2"
 OptimizationCMAEvolutionStrategy = "0.1, 0.2"
 OptimizationEvolutionary = "0.1, 0.2"
-OptimizationGCMAES = "0.1, 0.2"
+OptimizationGCMAES = "0.1, 0.2, 0.3"
 OptimizationMOI = "0.1, 0.2, 0.3"
 OptimizationMetaheuristics = "0.1, 0.2"
 OptimizationMultistartOptimization = "0.1, 0.2"
