--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -46,7 +46,7 @@ Juniper = "0.9"
 ModelingToolkit = ">= 8.11.0"
 NLopt = "0.6, 1"
 Optimization = "3"
-OptimizationBBO = "0.1, 0.2"
+OptimizationBBO = "0.1, 0.2, 0.4"
 OptimizationCMAEvolutionStrategy = "0.1, 0.2"
 OptimizationEvolutionary = "0.1, 0.2"
 OptimizationGCMAES = "0.1, 0.2"
