--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -45,7 +45,7 @@ IterTools = "1"
 Juniper = "0.9"
 ModelingToolkit = ">= 8.11.0"
 NLopt = "0.6, 1"
-Optimization = "3"
+Optimization = "3, 4"
 OptimizationBBO = "0.1, 0.2"
 OptimizationCMAEvolutionStrategy = "0.1, 0.2"
 OptimizationEvolutionary = "0.1, 0.2"
