--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -51,7 +51,7 @@ OptimizationCMAEvolutionStrategy = "0.1, 0.2"
 OptimizationEvolutionary = "0.1, 0.2"
 OptimizationGCMAES = "0.1, 0.2"
 OptimizationMOI = "0.1, 0.2, 0.3"
-OptimizationMetaheuristics = "0.1, 0.2"
+OptimizationMetaheuristics = "0.1, 0.2, 0.3"
 OptimizationMultistartOptimization = "0.1, 0.2"
 OptimizationNLopt = "0.1, 0.2"
 OptimizationNOMAD = "0.1, 0.2"
