--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -57,7 +57,7 @@ OptimizationNLopt = "0.1, 0.2"
 OptimizationNOMAD = "0.1, 0.2"
 OptimizationOptimJL = "0.1, 0.2"
 OptimizationOptimisers = "0.1, 0.2"
-OptimizationPRIMA = "0.0.1"
+OptimizationPRIMA = "0.0.1, 0.3"
 OptimizationPolyalgorithms = "0.1"
 OptimizationSpeedMapping = "0.1"
 OrdinaryDiffEq = "6"
