--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -54,7 +54,7 @@ OptimizationMOI = "0.1, 0.2, 0.3"
 OptimizationMetaheuristics = "0.1, 0.2"
 OptimizationMultistartOptimization = "0.1, 0.2"
 OptimizationNLopt = "0.1, 0.2"
-OptimizationNOMAD = "0.1, 0.2"
+OptimizationNOMAD = "0.1, 0.2, 0.3"
 OptimizationOptimJL = "0.1, 0.2"
 OptimizationOptimisers = "0.1, 0.2"
 OptimizationPRIMA = "0.0.1"
