--- a/lib/OptimizationMOI/Project.toml
+++ b/lib/OptimizationMOI/Project.toml
@@ -18,7 +18,7 @@ Ipopt_jll = "=300.1400.400"
 Juniper = "0.9"
 MathOptInterface = "1"
 ModelingToolkit = "8.74"
-Optimization = "3.21"
+Optimization = "3.21, 4"
 Reexport = "1.2"
 SymbolicIndexingInterface = "0.3"
 Symbolics = "5"
