--- a/lib/OptimizationOptimJL/Project.toml
+++ b/lib/OptimizationOptimJL/Project.toml
@@ -11,7 +11,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
 Optim = "1"
-Optimization = "3.21"
+Optimization = "3.21, 4"
 Reexport = "1.2"
 SparseArrays = "1.6"
 julia = "1.6"
