CompatHelper: bump compat for OptimizationSpeedMapping to 0.2 for package docs, (keep existing compat)

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -59,7 +59,7 @@ OptimizationOptimJL = "0.1, 0.2"
 OptimizationOptimisers = "0.1, 0.2"
 OptimizationPRIMA = "0.0.1"
 OptimizationPolyalgorithms = "0.1"
-OptimizationSpeedMapping = "0.1"
+OptimizationSpeedMapping = "0.1, 0.2"
 OrdinaryDiffEq = "6"
 ReverseDiff = ">= 1.9.0"
 SciMLBase = "2"
