--- a/lib/OptimizationOptimisers/Project.toml
+++ b/lib/OptimizationOptimisers/Project.toml
@@ -11,7 +11,7 @@ ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
-Optimisers = "0.2, 0.3"
+Optimisers = "0.2, 0.3, 0.4"
 Optimization = "3.21"
 ProgressLogging = "0.1"
 Reexport = "1.2"
