--- a/Project.toml
+++ b/Project.toml
@@ -64,7 +64,7 @@ SymbolicIndexingInterface = "0.3.2"
 Symbolics = "5.12"
 TerminalLoggers = "0.1"
 Tracker = "0.2.29"
-Zygote = "0.6.67"
+Zygote = "0.6.67, 0.7"
 julia = "1.9"
 
 [extras]
